Major update: VIPE integration and enhanced HaMeR tracking
- Add VIPE submodule for superior camera estimation
- Update HaMeR submodule with enhanced tracking features:
  * Hallucination prevention via IoU-based overlap detection
  * Bbox jump correction for temporal consistency
  * Handedness tracking and flip detection
- Add VIPE pipeline integration in vidproc.py
- Add video_vipe.yaml configuration
- Update visualization to support selective temporal smoothing
- Add depth constraint loss for optimization stability
- Update README with comparison and usage instructions

--- a/dyn-hamr/confs/config.yaml
+++ b/dyn-hamr/confs/config.yaml
@@ -26,9 +26,10 @@ vis:
     - above
     - side
     - front
-    # - src_cam
+    - src_cam
   make_grid: True
   overwrite: False
+  render_keypoints: False  # Overlay GT 2D keypoints on source camera view
 
 MANO:
   MODEL_PATH: ${paths.DATA_DIR}/mano
