--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = third-party/hamer
 	url = https://github.com/ZhengdiYu/hamer.git
 	branch = dynamic-hamer
+[submodule "third-party/vipe"]
+	path = third-party/vipe
+	url = https://github.com/nv-tlabs/vipe
