--- a/dyn-hamr/confs/optim.yaml
+++ b/dyn-hamr/confs/optim.yaml
@@ -11,14 +11,14 @@ optim:
     save_meshes: False
 
   root:
-    num_iters: 30
+    num_iters: 50
 
   smpl:
     num_iters: 0
 
   smooth:
     opt_scale: False
-    num_iters: 60
+    num_iters: 90
 
   motion_chunks:
     chunk_size: 10
@@ -28,11 +28,12 @@ optim:
 
   loss_weights:
     penetration: [0,0,0] # [0, 1.0, 10.0]
-    joints2d: [0.001, 0.001, 0.001] # raw: [0.001, 0.001, 0.001]
+    joints2d: [0.001, 0.001, 0.001] # Increased smooth_fit weight from 0.001 to 0.1 to better match 2D keypoints
     bg2d: [0.0, 0.000, 0.000]
     cam_R_smooth : [0.0, 0.0, 0.0]
     cam_t_smooth : [0.0, 0.0, 0.0]
-    bio : [10, 10, 10]
+    bio : [0.0, 0.0, 0.0] # [10, 10, 10]
+    depth_constraint: [100.0, 100.0, 0.0] # Prevent hand from being behind camera - MUST be stronger than 2D loss
       #    bg2d: [0.0, 0.0001, 0.0001]
       #    cam_R_smooth : [0.0, 1000.0, 1000.0]
       #    cam_t_smooth : [0.0, 1000.0, 1000.0]
@@ -41,7 +42,7 @@ optim:
     joints3d_rollout: [0.0, 0.0, 0.0]
     verts3d: [0.0, 0.0, 0.0]
     points3d: [0.0, 0.0, 0.0]
-    pose_prior: [0.04, 0.04, 0.04]
+    pose_prior: [0.1, 0.1, 0.1]
     shape_prior: [0.05, 0.05, 0.05]
     motion_prior: [0.0, 0.0, 0.075]
     init_motion_prior: [0.0, 0.0, 0.075]
