--- a/dyn-hamr/confs/optim.yaml
+++ b/dyn-hamr/confs/optim.yaml
@@ -18,7 +18,7 @@ optim:
 
   smooth:
     opt_scale: False
-    num_iters: 90
+    num_iters: 300
 
   motion_chunks:
     chunk_size: 10
@@ -28,7 +28,8 @@ optim:
 
   loss_weights:
     penetration: [0,0,0] # [0, 1.0, 10.0]
-    joints2d: [0.001, 0.001, 0.001] # Increased smooth_fit weight from 0.001 to 0.1 to better match 2D keypoints
+    # joints2d: [1, 1, 1] # Increased smooth_fit weight from 0.001 to 0.1 to better match 2D keypoints
+    joints2d: [10000, 10000, 10000] # Increased smooth_fit weight from 0.001 to 0.1 to better match 2D keypoints
     bg2d: [0.0, 0.000, 0.000]
     cam_R_smooth : [0.0, 0.0, 0.0]
     cam_t_smooth : [0.0, 0.0, 0.0]
@@ -38,11 +39,12 @@ optim:
       #    cam_R_smooth : [0.0, 1000.0, 1000.0]
       #    cam_t_smooth : [0.0, 1000.0, 1000.0]
     joints3d: [0.0, 0.0, 0.0]
-    joints3d_smooth: [1.0, 10.0, 0.0] # raw: [1.0, 10.0, 0.0]
+    joints3d_smooth: [0.1, 1.0, 0.0] # raw: [1.0, 10.0, 0.0]
+    # joints3d_smooth: [0, 0, 0.0] # raw: [1.0, 10.0, 0.0]
     joints3d_rollout: [0.0, 0.0, 0.0]
     verts3d: [0.0, 0.0, 0.0]
     points3d: [0.0, 0.0, 0.0]
-    pose_prior: [0.1, 0.1, 0.1]
+    pose_prior: [1, 1, 1]
     shape_prior: [0.05, 0.05, 0.05]
     motion_prior: [0.0, 0.0, 0.075]
     init_motion_prior: [0.0, 0.0, 0.075]
