Add NaN detection, scale normalization, and bbox cleaning improvements
- Add early NaN/Inf detection in loss functions to prevent optimization explosion
- Implement scale normalization for joints2d and joints3d_smooth losses
- Add safety checks for degenerate hand geometry (collapsed joints)
- Update bbox cleaning pipeline with improved handedness detection
- Add new video assets and update configuration files

--- a/dyn-hamr/confs/config.yaml
+++ b/dyn-hamr/confs/config.yaml
@@ -28,7 +28,7 @@ vis:
     - front
     - src_cam
   make_grid: True
-  overwrite: False
+  overwrite: True
   render_keypoints: False  # Overlay GT 2D keypoints on source camera view
 
 MANO:
@@ -54,7 +54,7 @@ log_root: ../outputs/logs
 log_dir: ${log_root}/${data.type}-${data.split}
 exp_name: ${now:%Y-%m-%d}
 temporal_smooth: True
-gpu: 1
+gpu: 0
 is_static: False
 
 hydra:
